[gd_scene load_steps=18 format=1]

[ext_resource path="res://src/home_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/particular/backgroundOk.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/particular/unnamed.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/particular/blue_button13.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/particular/blue_button04.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/cocogoose_trial.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]

font/size = 60
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]

font/size = 60
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]

font/size = 50
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]

font/size = 50
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]

font/size = 50
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]

font/size = 40
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]

font/size = 60
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]

font/size = 60
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 6 )

[sub_resource type="Animation" id=9]

resource/name = "make_question"
length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("nd_ask/TextEdit:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("nd_ask/txb_send:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("nd_ask/TextEdit:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.1, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("nd_ask/txb_send:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.1, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("txb_back:visibility/visible")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("txb_back:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0.1, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=10]

resource/name = "view_modal"
length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("txb_ask:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("txb_response:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("txb_ask:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.1, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("txb_response:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.1, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=11]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("nd_ask/txb_training_1:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("nd_ask/txb_training_2:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("nd_ask/txb_training_3:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("nd_ask/txb_training_1:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.1, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("nd_ask/txb_training_2:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0.1, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("nd_ask/txb_training_3:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0.1, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("txb_back:visibility/visible")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("txb_back:visibility/opacity")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0.1, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="nd_home_screen" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="spr_background" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="spr_logo" type="Sprite" parent="."]

transform/pos = Vector2( 352.208, 106.379 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="txb_ask" type="TextureButton" parent="."]

editor/display_folded = true
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 82.0
margin/top = 452.0
margin/right = 638.0
margin/bottom = 576.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_preguntar" type="Label" parent="txb_ask"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 10.0
margin/right = 556.0
margin/bottom = 134.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.117647, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "preguntar"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="txb_response" type="TextureButton" parent="."]

editor/display_folded = true
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 82.0
margin/top = 761.0
margin/right = 638.0
margin/bottom = 885.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_responder" type="Label" parent="txb_response"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 10.0
margin/right = 556.0
margin/bottom = 134.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.117647, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "responder"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="txb_learn" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 133.0
margin/top = 1032.0
margin/right = 173.0
margin/bottom = 1072.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="nd_ask" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="txb_training_1" type="TextureButton" parent="nd_ask"]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 76.0
margin/top = 398.0
margin/right = 632.0
margin/bottom = 486.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_name_training" type="Label" parent="nd_ask/txb_training_1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 556.0
margin/bottom = 88.0
custom_fonts/font = SubResource( 3 )
text = "qa testing"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="txb_training_2" type="TextureButton" parent="nd_ask"]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 76.0
margin/top = 600.0
margin/right = 632.0
margin/bottom = 688.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_name_training" type="Label" parent="nd_ask/txb_training_2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 556.0
margin/bottom = 88.0
custom_fonts/font = SubResource( 4 )
text = "coding basic"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="txb_training_3" type="TextureButton" parent="nd_ask"]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 76.0
margin/top = 782.0
margin/right = 632.0
margin/bottom = 870.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_name_training" type="Label" parent="nd_ask/txb_training_3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 556.0
margin/bottom = 88.0
custom_fonts/font = SubResource( 5 )
text = "data bases"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextEdit" type="TextEdit" parent="nd_ask"]

visibility/visible = false
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 37.0
margin/top = 170.0
margin/right = 683.0
margin/bottom = 1009.0
custom_fonts/font = SubResource( 6 )
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="txb_send" type="TextureButton" parent="nd_ask"]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 341.0
margin/top = 1100.0
margin/right = 680.0
margin/bottom = 1231.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_send" type="Label" parent="nd_ask/txb_send"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 339.0
margin/bottom = 131.0
custom_fonts/font = SubResource( 7 )
text = "enviar"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="nd_response" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="txb_back" type="TextureButton" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 31.0
margin/top = 1100.0
margin/right = 370.0
margin/bottom = 1231.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_back" type="Label" parent="txb_back"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 339.0
margin/bottom = 131.0
custom_fonts/font = SubResource( 8 )
text = "volver"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="an_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/make_question = SubResource( 9 )
anims/view_modal = SubResource( 10 )
anims/view_training = SubResource( 11 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


